# EPITECH-Raytracer

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  logs.txt  my_file.ppm  raytracer
.github/workflows/: cicd.yml
assets/: config.conf  credits.txt  tuto.conf
assets/demo/: antialiasing.ppm  antialiasing_out.ppm  plane.ppm  raycasting.ppm
includes/: Camera.hpp  Colors.hpp  Core.hpp  Exceptions.hpp  Image.hpp  Material.hpp  Math.hpp  Matrix.hpp  Object.hpp  Ray.hpp  Sphere.hpp  configs.hpp  headers.hpp  includes.hpp
includes/Interface/: IMaterial.hpp  IObject.hpp  IPrimitive.hpp
includes/Materials/: Material.hpp
includes/Math/: Math.hpp  Matrix.hpp
includes/Objects/: Light.hpp  Object.hpp  Plane.hpp  Sphere.hpp
includes/Raytracer/: Camera.hpp  Object.hpp  Ray.hpp
includes/Raytracer/Objects/: Light.hpp  Plane.hpp  Sphere.hpp
src/: Camera.cpp  Colors.cpp  Core.cpp  Exceptions.cpp  Image.cpp  Material.cpp  Math.cpp  Object.cpp  Ray.cpp  Sphere.cpp  main.cpp  mmain.cpp
src/Abstract/: AMaterial.cpp  AMaterial.hpp  AObject.cpp  AObject.hpp  APrimitive.cpp  APrimitive.hpp  Factory.cpp  Factory.hpp
src/Core/: Core.cpp  Core.hpp
src/Exceptions/: Exceptions.cpp  Exceptions.hpp
src/Factory/: ObjectFactory.cpp  ObjectFactory.hpp
src/Image/: Colors.cpp  Colors.hpp  Image.cpp  Image.hpp
src/Material/: BuildMaterials.cpp  BuildMaterials.hpp  Material.cpp  Material.hpp  Matte.cpp  Matte.hpp  Metal.cpp  Metal.hpp
src/Materials/: Material.cpp
src/Math/: Math.cpp  Matrix.hpp  Point3D.cpp  Point3D.hpp  Ray.cpp  Ray.hpp  Vector3D.cpp  Vector3D.hpp
src/MultiThreading/: Thread.cpp  Thread.hpp
src/MultiThreads/: Threads.cpp  Threads.hpp
src/Objects/: Camera.cpp  Camera.hpp  Hitables.cpp  Hitables.hpp  Hittables.cpp  Hittables.hpp  Light.cpp  Light.hpp  Object.cpp  Plane.cpp  Sphere.cpp
src/Observer/: FileObserver.cpp  FileObserver.hpp
src/Primitives/: Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp
src/Raytracer/: Colors.cpp  Ray.cpp
src/Raytracer/Objects/: Light.cpp  Object.cpp  Plane.cpp  Sphere.cpp
tests/: CMakeLists.txt  run_unit_tests.sh  tests.cpp
